--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -342,6 +342,138 @@ public static int findNearestRepetition(List<String> paragraph) {
 
 배열의 각 원소에 대해 시간이 상수 시간만큼 걸리므로 전체 시간 복잡도는 $O(n)$이 된다. 배열 안의 서로 다른 원소의 개수를 d라 한다면 공간 복잡도는 $O(d)$가 된다.
 
+## 문제 12.6 모든 값을 포함하는 가장 작은 부분 배열 구하기
+
+검색 엔진에서 어떤 단어를 입력하면 인터넷창에 결과가 뜬다. 또한 각 결과 엔트리는 웹페이지에서 검색된 단어를 강조해서 보여 준다. 예를 들어 여러분이 노예 해방 성명서에서 "연방(Union)"과 "구하기(save)"를 검색한다면 그림 12.1과 같은 결과가 나올 것이다.
+
+이 투쟁에서 가장 중요한 목표는 **연방을 구하기** 위함이지, ...
+
+해당 페이지의 문장을 굶게 표시하고, 강조가 필요한 단어는 밑줄로 나타냈다. 굵게 표시된 부분 문자열은 검색한 모든 단어를 포함하는 가장 짧은 부분 문자열이다. 이 문제를 다음과 같이 추상적으로 나타내 보자.
+
+문자열 배열과 검색어 집합이 주어졌을 때, 집합 안의 모든 검색어를 포함하는 가장 짧은 부분 문자열의 시작 인덱스와 끝 인덱스를 반환하는 프로그램을 작성하라.
+
+> 힌트: 검색어를 모두 포함하는 가장 짧은 부분 배열의 개수는 최대 몇 개나 될까?
+
+무식한 방법으로 먼저 생각해 보자. 가능한 모든 부분배열에 대해 해당 부분배열이 모든 검색어를 포함하는지 확인해 보면 된다. 배열의 길이가 n일 때, 부분배열의 개수는 $O(n^2)$이다. 검색어 집합은 해시 테이블에 넣어서 존재 유무를 확인할 수 있고 $O(n)$에 수행 가능하다. 따라서 총 시간 복잡도는 $O(n^3)$이 된다.
+
+부분배열의 크기를 점차적으로 증가해 가면 시간 복잡도를 $O(n^2)$로 개선할 수 있다. i번째 인덱스에서 시작하는 모든 부분배열에 대해 길이를 점차적으로 증가하다가 모든 검색어 집합을 포함하는 순간 멈춘다. 남아 있는 검색어 집합을 기록하기 위해 해시 테이블을 사용한다. 부분배열의 길이를 증가할 때마다 나머지 검색어 집합을 갱신하는 데 $O(1)$ 시간이 소요된다.
+
+부분배열의 시작 위치를 i에서 i+1로 옮길 때도 같은 방식으로 복잡도를 개선할 수 있다. 즉, 시작 위치가 i인 부분배열 중에서 모든 검색어 집합을 포함하는 부분배열의 끝 위치가 j라고 하자. 그렇다면 시작 위치가 i+1인 부분배열 중에서 끝 위치가 j 이전인 부분배열은 고려할 필요가 없다. 따라서 부분배열의 시작 위치를 i+1로 옮기 때 끝 위치는 j 그대로 유지하면 된다. 만약 해당 부분배열이 여전히 검색어 집합을 모두 포함한다면 시작 위치를 하나 증가시키고, 그렇지 않다면 끝 위치를 증가시키면 된다. 이렇게 i 혹은 j를 하나씩 증가시키면서 해법을 구하면 $O(n)$ 시간 안에 끝낼 수 있다.
+
+좀 더 구체적인 예제를 통해 살펴보자. 주어진 배열이 <apple, banana, apple, apple, dog, cat, apple, dog, banana, apple, cat, dog>이고 검색어 집합이 {banana, cat}이라 하자. 0번 위치에서 시작하는 부분 집합 중에서 모든 검색어를 포함하려면 부분배열의 끝 위치가 5여야 한다. 시작 위치를 1로 옮긴다. 0번쨰 원소는 집합에 들어 있지 않으므로 여전히 끝 위치는 5가 된다. 시작 위치를 2로 옮기면 검색어 집합을 모두 포함하지 않으므로 끝 위치를 5에서 8로 옮긴다. 즉, 2에서 8까지의 부분배열이 집합을 모두 포함한다. 부분배열의 시작 위치를 2,3,4,5로 차례로 증가시킨다. 시작 위치가 6이 됐을 때 집합을 모두 포함하지 않게 되므로 끝 위치를 10으로 옮긴다. 시작 위치를 8로 옮겨도 여전히 집합을 모두 포함한다. 하지만 시작 위치를 더 증가시키면 집합을 포함하지 않게 된다. 따라서 모든 집합을 포함하는 가장 짧은 부분배열은 8에서 10이 된다.
+
+```java
+// 부분배열을 시작 인덱스와 끝 인덱스를 사용해서 나타낸다.
+private static class Subarray {
+    public Integer start;
+    public Integer end;
+
+    public Subarray(Integer start, Integer end) {
+        this.start = start;
+        this.end = end;
+    }
+}
+
+public static Subarray findSmallestSubarrayCoveringSet(List<String> paragraph, Set<String> keywords) {
+    Map<String, Integer> keywordsToCover = new HashMap<>();
+    for (String keyword : keywords) {
+        keywordsToCover.put(keyword, keywordsToCover.containsKey(keyword) ? keywordsToCover.get(keyword) + 1 : 1);
+    }
+
+    Subarray result = new Subarray(-1, -1);
+    int remainingToCover = keywords.size();
+    for (int left = 0, right = 0; right < paragraph.size(); ++right) {
+        Integer keywordCount = keywordsToCover.get(paragraph.get(right));
+        if (keywordCount != null) {
+            keywordsToCover.put(paragraph.get(right), --keywordCount);
+            if (keywordCount >= 0) {
+                --remainingToCover;
+            }
+        }
+        // left가 end에 다다르거나 keywordsToCover가 모든 단어를 포함하지 못할 때까지 left를 증가시킨다.
+        while (remainingToCover == 0) {
+            if ((result.start == -1 && result.end == -1) || right - left < result.end - result.start) {
+                result.start = left;
+                result.end = right;
+            }
+            keywordCount = keywordsToCover.get(paragraph.get(left));
+            if (keywordCount != null) {
+                keywordsToCover.put(paragraph.get(left), ++keywordCount);
+                if (keywordCount > 0) {
+                    ++remainingToCover;
+                }
+            }
+            ++left;
+        }
+    }
+    return result;
+}
+```
+
+배열의 길이를 n이라 하자. 두 인덱스를 증가시키는데 $O(1)$의 시간이 걸리고, 각 인덱스를 최대 n-1번 증가시키므로 시간 복잡도는 $O(n)$이 된다.
+
+이 방법은 부분배열을 메모리에 저장해야 한다는 단점이 있는데, 다음과 같이 스트리밍으로 구현하는 방법도 있다. 배열 A를 처리할 때 최근에 등장한 검색어를 함께 추적해 보자. 즉, 이중 연결리스트 L을 사용해서 검색어 집합 Q에 들어 있는 단어의 최근 위치를 저장하고, 해시 테이블 H를 사용해서 Q의 단어를 L의 노드로 매핑시킨다. Q의 단어가 등장할 때마다 H를 통해 찾은 L의 노드를 삭제한다. A의 현재 위치를 저장할 새로운 노드를 만들고, 이를 L의 끝에 추가한다. H 또한 갱신한다. 이제 L에 저장된 단어의 순서는 A의 순서와 같게 된다. 따라서 L에 포함된 단어의 개수가 $n_q$(등장한 모든 단어)이고, 현재 인덱스에서 L의 첫 번째 노드에 저장된 인덱스를 뺀 값이 현재까지의 최선보다 작다면, 현재까지의 최선을 갱신하면 된다. 시간 복잡도는 여전히 $O(n)$이다.
+
+```java
+// 부분 배열을 시작 인덱스와 끝 인덱스를 사용해서 나타낸다.
+private static class Subarray {
+    public Integer start;
+    public Integer end;
+
+    public Subarray(Integer start, Integer end) {
+        this.start = start;
+        this.end = end;
+    }
+}
+
+private static Integer getValueForFirstEntry(LinkedHashMap<String, Integer> m) {
+    // LinkedHashMap은 키와 값 쌍을 순회할 때 최근에 삽입된 순서부터 차례대로 순회한다는 사실을 보장해 준다.
+    Integer result = null;
+    for (Map.Entry<String, Integer> entry : m.entrySet()) {
+        result = entry.getValue();
+        break;
+    }
+    return result;
+}
+
+public static Subarray findSmallestSubarrayCoveringSet(Iterator<String> iter, List<String> queryStrings) {
+    LinkedHashMap<String, Integer> dict = new LinkedHashMap<>();
+    for (String s : queryStrings) {
+        dict.put(s, null);
+    }
+    int numStringsFromQueryStringsSeenSoFar = 0;
+
+    Subarray res = new Subarray(-1, -1);
+    int idx = 0;
+    while (iter.hasNext()) {
+        String s = iter.next();
+        if (dict.containsKey(s)) { // s가 queryStrings에 들어 있다.
+            Integer it = dict.get(s);
+            if (it == null) {
+                // queryStrings에 해당 문자열이 처음 등장한다.
+                numStringsFromQueryStringsSeenSoFar++;
+            }
+            // dict.put(s, idx)를 바로 호출하면 안 된다. 왜냐하면 키값이 s인 엔트리가
+            // 이미 큐에 들어 있을 때, 해당 엔트리를 큐의 앞부분으로 옮겨줘야 하기 때문이다.
+            // 따라서 이미 큐에 들어 있는 키값 s를 명시적으로 삭제한 뒤에
+            // (s, idx)를 다시 큐에 넣어 줘야 한다.
+            dict.remove(s);
+            dict.put(s, idx);
+        }
+
+        if (numStringsFromQueryStringsSeenSoFar == queryStrings.size()) {
+            // queryStrings의 모든 문자열이 등장했으므로, 필요한 작업을 수행한다.
+            if ((res.start == -1 && res.end == -1) || idx - getValueForFirstEntry(dict) < res.end - res.start) {
+                res.start = getValueForFirstEntry(dict);
+                res.end = idx;
+            }
+        }
+        ++idx;
+    }
+    return res;
+}
+```
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
