--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -474,6 +474,82 @@ public static Subarray findSmallestSubarrayCoveringSet(Iterator<String> iter, Li
 }
 ```
 
+## 문제 12.7 모든 값을 순차적으로 포함하는 가장 작은 부분배열 구하기
+
+문제 12.6에서는 검색어의 순서를 고려하지 않았다. 검색어가 등장한 순서대로 결과가 나와야 한다면 어떻게 해야 할까? 예를 들어 그림 12.1에서 "구하기"와 "연방"의 검색어가 순서대로 배열되어 있는 결과를 찾아야 한다면, 가장 짧은 부분 문자열은 "구하기 위함이지, ... 노예를 해방시키지 않고 연방"이 된다.
+
+문자열 배열이 두 개 주어졌을 때, 첫 번째 배열('문단' 배열)에서 두 번째 배열('단어' 배열)의 모든 문자열을 '순차적으로 포함'하는 가장 작은 부분배열의 시작 위치와 끝 위치를 반환하는 프로그램을 작성하라. 주어진 단어 배열에 중복은 없다고 가정해도 좋다. 예를 들어 주어진 문단 배열이 <apple, banana, cat, apple>이고, 단어 배열이 <banana, apple>이라고 하자. 0번 인덱스에서 시작해서 1번 인덱스로 끝나는 문단 부분배열은 이 문제의 요구조건을 만족시키지 못한다. 문단 배열 안에 모든 단어가 등장하긴 했지만, 단어가 순서대로 등장하지는 않기 때문이다. 반면에, 1에서 3 사이의 부분배열은 이 문제의 요구조건을 만족한다.
+
+> 힌트: 문단 배열의 각 인덱스에서 시작해서 모든 값을 순차적으로 포함하는 가장 짧은 부분배열을 구하라.
+
+무식한 방법은 문단 배열의 모든 부분배열을 순회하는 것이다. 이때 문단 배열의 부분배열이 단어 배열을 순차적으로 포함하는지 확인하려면 첫 번째 단어가 등장한 첫 번째 위치를 찾을 수 있어야 한다. 이후에 나타나는 첫 번째 단어는 고려할 이유가 없다. 왜냐하면 '단어' 배열의 두 번째 단어가 이어서 나타나야 하기 때문이다. 따라서 다음으로 할 작업은, 첫 번째 단어가 등장한 첫 번째 위치 이후에 두 번째 단어가 등장한 처음 위치를 찾는 것이다. 단어의 등장 순서가 중요하므로 첫 번째 단어의 첫 번째 위치보다 먼저 등장한 두 번째 단어는 고려 대상이 아니다. 이 방법으로 부분배열이 문제의 조건을 충족하는지 확인하면, 문단 배열의 길이가 n일 때 $O(n)$의 시간이 소요된다. 문단 배열의 부분배열의 개수가 $O(n^2)$이므로 총 시간 복잡도는 $O(n^3)$이 된다.
+
+이 방법은 같은 작업을 반복해서 수행한다. 따라서 앞에서 설명했던 것과 비슷하게, 단어 배열을 순차적으로 포함하는 인덱스에서 시작하는, 가장 짧은 부분배열을 구한다면 시간 복잡도를 $O(n^2)$로 개선시킬 수 있다. 부분배열의 끝 위치를 증가시켜 나가면서 동시에 등장한 단어를 순서대로 포함시키는 방법을 쓰면 된다.
+
+개선된 알고리즘 역시 같은 작업을 반복한다. 부분배열의 시작 위치를 증가시킬 때도 이전에 구해 놓았던 결과를 재사용하면 더 개선할 수 있다. 하지만 이 방법은 이전 결과를 저장할 자료구조가 추가로 필요하다.
+
+즉, 해시 테이블 두 개를 사용하면 첫 k-1개의 단어를 순차적으로 포함하는 가장 짧은 부분배열이 주어졌을 때, 첫 k개의 단어를 순차적으로 포함하는 가장 짧은 부분배열을 구할 수 있다.
+
+문단 배열에서 i번째 문자열을 처리할 때 해당 문자열이 j번째 단어라면, 해당 단어가 등장한 최근 위치를 i로 갱신한다. i에서 끝나는 부분배열 중에서 첫 j개의 단어를 순차적으로 포함하는 가장 짧은 부분배열은 첫 j-1개의 단어를 순차적으로 포함하는 가장 짧은 부분배열의 시작 위치에서 i까지의 부분배열이 된다. 다음은 이를 구현한 코드이다.
+
+```java
+private static class Subarray {
+    // 부분배열을 시작 인덱스와 끝 인덱스를 사용해서 나타낸다.
+    public Integer start;
+    public Integer end;
+
+    public Subarray(Integer start, Integer end) {
+        this.start = start;
+        this.end = end;
+    }
+}
+
+public static Subarray findSmallestSubarrayCoveringSet(List<String> paragraph, List<String> keywords) {
+    // 각 단어와 단어 배열에서의 인덱스를 매핑한다.
+    Map<String, Integer> keywordToIdx = new HashMap<>();
+
+    // 단어 배열의 인덱스를 통해 해당 단어가 무엇인지 알 수 있기 때문에 단어 대신 인덱스를 통해 벡터를 탐색한다.
+    List<Integer> latestOccurrence = new ArrayList<>(keywords.size());
+
+    // 각 단어에 대해(해당 단어는 단어 배열의 인덱스로 표기한다) 가장 최근에 등장한
+    // 해당 단어의 위치를 끝 위치로 하면서 그 앞의 단어들을 순차적으로 포함하는
+    // 부분 배열 중에서 가장 짧은 부분 배열의 길이를 저장한다.
+    List<Integer> shortestSubarrayLength = new ArrayList<>(keywords.size());
+
+    // latestOccurrence, shortestSubarrayLength, keywordToIdx를 초기화한다.
+    for (int i = 0; i < keyword.size(); i++) {
+        latestOccurrence.add(-1);
+        shortestSubarrayLength.add(Integet.MAX_VALUE);
+        keywordToIdx.put(keywords.get(i), i);
+    }
+
+    int shortestDistance = Integer.MAX_VALUE;
+    Subarray result = new Subarray(-1 ,-1);
+    for (int i = 0; i < paragraph.size(); i++) {
+        Integer keywordIdx = keywordToIdx.get(paragraph.get(i));
+        if (keywordIdx != null) {
+            if (keywordIdx == 0) { // 첫 번째 단어
+                shortestSubarrayLength.set(0, 1);
+            } else if (shortestSubarrayLength.get(keywordIdx - 1) != Integer.MAX_VALUE) {
+                int distanceToPreviousKeyword = i - latestOccurrence.get(keywordIdx - 1);
+                shortestSubarrayLength.set(keywordIdx, distanceToPreviousKeyword + shortestSubarrayLength.get(keywordIdx - 1));
+            }
+            latestOccurrence.set(keywordIdx, i);
+
+            // 마지막 단어, 개선된 부분 배열을 찾는다.
+            if (keywordIdx == keywords.size() - 1 && shortestSubarrayLength.get(shortestSubarrayLength.size() - 1) < shortestDistance) {
+                shortestDistance = shortestSubarrayLength.get(shortestSubarrayLength.size() - 1);
+                result.start = i - shortestSubarrayLength.get(shortestSubarrayLength.size() - 1) + 1;
+                result.end = i;
+            }
+        }
+    }
+    return result;
+}
+```
+
+문단 배열의 각 엔트리를 처리하는 데 상수 번의 탐색과 갱신이 필요하므로, 문단 배열의 길이가 n일 때 시간 복잡도는 $O(n)$이 된다. 해시 테이블 세 개를 추가로 사용하므로, 단어의 개수가 m일 때 공간 복잡도는 $O(m)$이 된다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
