--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -630,3 +630,69 @@ public static int longestContainedRange(List<Integer> A) {
 ```
 
 배열의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n)$이 된다. 왜냐하면 배열의 원소를 많아야 한 번, 해시 테이블에서 추가하거나 삭제하기 때문이다.
+
+## 문제 12.10 모든 문자열 분해하기
+
+이 문제는 '문장'과 '단어' 집합이 주어졌을 때, 모든 단어를 이어 붙인 부분 문자열을 '문장'에서 찾는다. 예를 들어 문장이 "amanaplanacanal"이고 단어 집합이 ["can","apl","ana"]라면, "aplanacan"이 모든 단어를 이어 붙인 부분 문자열이 된다.
+
+'문장'과 '단어' 집합이 입력으로 주어졌을 때, 단어를 모두 이어 붙인 문자열이 문장의 어느 부분과 같은지 그 시작 위치를 반환하는 프로그램을 작성하라. 모든 단어는 한 번씩 등장해야 하며 이어 붙인 순서는 중요하지 않다. 모든 단어의 길이는 같다고 가정해도 좋다. 단어 배열에는 중복된 단어가 존재할 수도 있다.
+
+> 힌트: 모든 단어의 길이가 같다는 사실을 이용하라.
+
+어떤 문자열이 이 단어를 이어 붙인 문자열인지 확인하는 문제부터 생각해 보자. 재귀를 사용하면 쉽게 해결할 수 있다. 먼저 문자열에서 단어와 일치하는 접두사를 찾는다. 문자열에서 접두사를 제거한 나머지 부분, 그리고 남아 있는 단어로 이 과정을 재귀 호출로 반복한다.
+
+모든 단어의 길이가 n으로 같을 때 주어진 문자열의 접두사가 될 수 있는 단어는 오직 하나뿐이다. 따라서 문장에서 직접 단어를 찾으면 된다. 찾는 단어가 없으면, 그 뒤에 단어를 이어 붙인다고 해도 해당 문자열을 만들 수 없다. 찾는 단어가 있으면 단어 집합에서 찾는 단어를 없애고, 일치하는 접두사를 문장에서 제거한 뒤 같은 작업을 반복한다.
+
+문장에서 단어를 이어 붙인 부분 문자열을 찾으려면 문장의 모든 인덱스에서 이 작업을 수행해 보면 된다.
+
+```java
+public static List<Integer> findAllSubstrings(String s, List<String> words) {
+    Map<String, Integer> wordToFreq = new HashMap<>();
+    for (String word : words) {
+        increment(word, wordToFreq);
+    }
+
+    int unitSize = words.get(0).length();
+    List<Integer> result = new ArrayList<>();
+    for (int i = 0; i + unitSize * words.size() <= s.length(); ++i) {
+        if (matchAllWordsInDict(s, wordToFreq, i, words.size(), unitSize)) {
+            result.add(i);
+        }
+    }
+    return result;
+}
+
+private static boolean matchAllWordsInDict(String s,
+                                           Map<String, Integer> wordToFreq,
+                                           int start, int numWords,
+                                           int unitSize)
+{
+    Map<String, Integer> currStringToFreq = new HashMap<>();
+    for (int i = 0; i < numWords; i++) {
+        String currWord = s.substring(start + i * unitSize, start + (i + 1) * unitSize);
+        Integer freq = wordToFreq.get(currWord);
+        if (freq == null) {
+            return false;
+        }
+        increment(currWord, currStringToFreq);
+        if (currStringToFreq.get(currWord) > freq) {
+            // currWord가 너무 많이 등장했다.
+            return false;
+        }
+        return true;
+    }
+}
+
+private static void increment(String word, Map<String, Integer> dict) {
+    Integer count = dict.get(word);
+    if (count == null) {
+        count = 0;
+    }
+    count++;
+    dict.put(word, count);
+}
+```
+
+시간 복잡도는 다음과 같이 분석할 수 있다. 단어의 개수를 m, 각 단어의 길이를 n, 문장의 길이를 N이라고 하자. 어떤 인덱스 i에서 시작하고 길이가 nm인 부분 문자열이, 모든 단어를 이어 붙인 문자열과 같은지 확인하는 작업은 $O(nm)$ 시간 복잡도가 걸린다. 단어 집합을 저장할 때 해시 테이블을 사용한다면 전체 시간 복잡도는 $O(Nnm)$이 된다. 실무에서는 문자열을 비교할 때, 같지 않은 순간 곧바로 멈출 수 있으므로 대개 이보다는 훨씬 빠르다.
+
+모든 단어의 길이가 같다고 가정하기 때문에 시간 복잡도나 구현 측면에서 문제 자체는 쉽다. 모든 단어의 길이가 같기 때문에 부분 문자열과 모든 단어를 이어 붙인 문자열이 같은지도 쉽게 확인할 수 있다.
