--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -69,3 +69,65 @@ public static class Student implements Comparable<Student> {
 `특별한 입력`, 예를 들어 값의 범위가 작거나 값의 개수가 작을 때에는 $O(n \log n)$이 아니라 $O(n)$ 시간 정렬을 사용하는 것이 좋다. [문제 5.1, 13.8]
 
 무식한 방법을 사용하면 정렬을 구현할 때 필요한 공간보다 `더 적은 공간`을 사용하는 경우가 종종 있다. [문제 13.2]
+
+## 문제 13.1 정렬된 두 배열의 교집합 구하기
+
+일반적인 검색 엔진은 역 인덱스를 사용해서 입력으로 주어진 단어와 매치되는 문서들을 찾는다. 각 문서에는 해당 문서를 식별할 수 있는 고유한 문서 ID가 주어진다. 역 인덱스는 단어 w가 포함된 문서 ID를 정렬된 순서로 반환한다. 정렬 순서는 검색 알고리즘에 따라 다를 것이다. 예를 들면 페이지랭크(page rank)가 감소하는 순서가 될 수도 있다. 검색 엔진은 여러 개의 단어가 쿼리로 주어졌을 때 각 단어별로 정렬된 문서 배열을 찾은 뒤 배열 사이의 교집합을 구해서 모든 단어를 포함하는 문서를 찾는다. 여기서 가장 계산 집약적인 단계는 정렬된 배열의 교집합을 찾는 부분이다.
+
+정렬된 배열 두 개가 주어졌을 때, 두 배열에 동시에 존재하는 원소를 새로운 배열 형태로 반환하라. 입력 배열에는 원소가 중복해서 나타날 수 있지만, 반환되는 배열에서는 원소가 중복되면 안 된다. 예를 들어 입력이 <2,3,3,5,5,6,7,7,8,12>와 <5,5,6,8,8,9,10,10>이라면, 그 결과는 (5,6,8)이 되어야 한다.
+
+> 힌트: 입력 배열의 길이 차이가 큰 경우의 문제를 풀어 보라. 길이 차이가 많이 나지 않을 경우에는 어떻게 풀 것인가?
+
+무식한 방법은 '루프 조인(loop join)' 방법을 사용하는 것이다. 즉, 한 배열의 모든 원소를 순회하면서 다른 배열의 원소와 비교한다. 두 배열의 길이를 각각 m과 n이라고 하자.
+
+```java
+public static List<Integer> intersectTwoSortedArrays(List<Intger> A, List<Integer> B) {
+    List<Integer> intersectionAB = new ArrayList<>();
+    for (int i = 0; i < A.size(); i++) {
+        if ( (i == 0 || !A.get(i).equals(A.get(i-1))) && B.contains(A.get(i)) ) {
+            intersectionAB.add(A.get(i));
+        }
+    }
+    return intersectionAB;
+}
+```
+
+무식한 방법의 시간 복잡도는 $O(mn)$이다.
+
+두 배열 모두 정렬되어 있으므로 최적화를 좀 더 해보자. 먼저 첫 번째 배열을 순회하면서 두 번째 배열에서 해당 원소를 찾을 때 이진 탐색을 사용해 볼 수 있다.
+
+```java
+public static List<Integer> intersectTwoSortedArray(List<Integer> A, List<Integer> B) {
+    List<Integer> intersectionAB = new ArrayList<>();
+    for (int i = 0; i < A.size(); i++) {
+        if ( (i == 0 || !A.get(i).equals(A.get(i-1))) && Collections.binarySearch(B, A.get(i)) >= 0 ) {
+            intersectionAB.add(A.get(i));
+        }
+    }
+}
+```
+
+순회하는 배열의 길이가 m일 때 시간 복잡도는 $O(m \log n)$이 된다. 길이가 짧은 배열을 바깥 루프로 사용하면 좀 더 개선할 수 있다. n이 m보다 훨씬 작다면, $n \log (m)$이 $m \log (n)$보다 훨씬 작다.
+
+배열 하나의 크기가 다른 하나보다 굉장히 작다면 이 방법은 가장 나은 해법이 된다. 하지만 두 배열의 길이가 비슷할 때는, 두 배열 모두 정렬되었다는 사실을 사용하지 않았기 때문에 좋은 방법이라고 볼 수 없다. 만약 두 입력 배열을 동시에 순서를 증가시키면 선형 시간에 문제를 풀 수 있다. 즉, 두 배열의 원소가 다르다면 더 작은 원소는 제거해도 괜찮다. 두 배열의 원소가 같다면 해당 값을 교집합에 추가한 뒤 둘 다 앞으로 나아간다. (중복된 값은 현재 원소와 이전 원소를 비교함으로써 해결할 수 있다.) 예를 들어 A = <2,3,3,5,7,11>이고 B = <3,3,7,15,31>일 때, 두 배열의 첫 번째 원소를 살펴보자. 2는 교집합에 포함될 수 없으므로 A에서 가리키는 원소를 두 번째로 바꾼다. 3은 두 배열에 모두 존재하므로 두 배열에서 가리키는 원소를 모두 증가시킨다. 여전히 두 배열 모두 3을 가리키지만 3은 이미 결과에 추가했으므로 지나친다. 이제 A는 5를 가리키고 B는 7을 가리킨다. 5를 제거하고 A에서 가리키는 원소를 하나 증가시킨다. A와 B 모두 7을 가리키므로 결과 배열에 추가한다. 그 뒤에 11을 제거하면 A 배열에는 원소가 남아 있지 않으므로 <3,7>을 반환하면 된다.
+
+```java
+public static List<Integer> intersectTwoSortedArray(List<Integer> A, List<Integer> B) {
+    List<Integer> intersectionAB = new ArrayList<>();
+    int i = 0, j = 0;
+    while ( i < A.size() && j < B.size() )  {
+        if (A.get(i).equals(B.get(j)) && (i == 0 || !A.get(i).equals(A.get(i-1)))) {
+            intersectionAB.add(A.get(i));
+            ++i;
+            ++j;
+        } else if (A.get(i) < B.get(j)) {
+            ++i;
+        } else { // A.get(i) > B.get(j)
+            ++j;
+        }
+    }
+    return intersectionAB;
+}
+```
+
+입력 배열의 각 원소마다 $O(1)$의 시간을 사용했으므로 전체 알고리즘의 시간 복잡도는 $O(m + n)$이 된다.
