--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -169,3 +169,43 @@ public static void mergeTwoSortedArrays(List<Integer> A, int m, List<Integer> B,
 ```
 
 시간 복잡도는 $O(m + n)$이다. 추가로 사용한 공간은 $O(1)$이다.
+
+## 문제 13.3 성을 제외한 중복되는 이름 제거하기
+
+배열에서 성을 제외한 중복된 이름을 삭제하는 효율적인 알고리즘을 설계하라. 예를 들어 입력이 <(Ian, Botham), (David, Gower), (Ian, Bell), (Ian, Chappell)>이라면, 결과는 <(Ian, Bell), (David, Gower)>이나 <(David, Gower), (Ian, Botham)>이 될 수 있다.
+
+> 힌트: 같은 이름을 가까이 두라
+
+무식한 방법은 해시 테이블을 사용하는 것이다. 이때 성을 제외한 이름만으로 동등성을 판단하는 함수가 필요하다. 해시 테이블에 이름을 넣은 뒤 차례대로 순회하면서 결과 배열에 작성하면 된다. 시간 복잡도는 $O(n)$이다.
+
+입력 배열에 결과를 작성한다면 추가 공간을 사용하지 않아도 된다. 먼저 배열을 정렬해서 같은 원소를 가까이에 둔다. 정렬의 시간 복잡도는 $O(n \log n)$이다. 중복된 원소는 서로 붙어 있으므로 이들을 제거하는 데는 $O(n)$의 시간이 걸린다. 단, 배열을 정렬하려면 원소 비교가 가능해야 한다.
+
+```java
+public static class Name implements Comparable<Name> {
+    String firstName;
+    String lastName;
+
+    @Override
+    public int compareTo(Name name) {
+        int cmpFirst = firstName.compareTo(name.firstName);
+        if (cmpFirst != 0) {
+            return cmpFirst;
+        }
+        return lastName.compareTo(name.lastName);
+    }
+}
+
+public static void eliminateDuplicate(List<Name> A) {
+    Collections.sort(A); // 같은 원소를 가까이 놓는다.
+    int writeIdx = 0;
+    for (int i = 1; i < A.size(); i++) {
+        if (!A.get(i).firstName.equals(A.get(writeIdx).firstName)) {
+            A.set(++writeIdx, A.get(i));
+        }
+    }
+    // 배열 크기를 줄인다.
+    A.subList(++writeIdx, A.size()).clear();
+}
+```
+
+시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
