--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -209,3 +209,49 @@ public static void eliminateDuplicate(List<Name> A) {
 ```
 
 시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
+
+## 문제 13.4 동전으로 만들 수 없는 가장 작은 숫자 구하기
+
+몇 개의 동전을 가지고 있다고 할 때, 이 동전들을 조합해서 만들 수 없는 숫자가 있다. 예를 들면, 동전들을 모두 합친 것보다 더 큰 숫자를 만들 수는 없다. 또, 가지고 있는 동전이 1,1,1,1,1,5,10,25라면 이 동전들을 조합해서 21을 만들 수 없고, 21은 만들 수 없는 숫자 중 가장 작다.
+
+양의 정수 배열을 입력받고 부분 배열의 합으로 만들 수 없는 가장 작은 숫자를 반환하는 프로그램을 작성하라.
+
+> 힌트: 짧은 배열 몇 개를 예재로 삼아 직접 풀어 보자.
+
+무식한 방법은 모든 가능한 숫자를 나열하는 것이다. 1부터 시작해서 각 숫자가 부분 배열의 합과 일치하는지 검사한다. 하지만 어떤 숫자가 부분 배열의 합과 일치하는지 검사하는 쉽고 효과적인 알고리즘은 없다. 휴리스틱(Heuristic)을 쓸 수도 있지만, 프로그램이 너무 크고 복잡해서 다루기 힘들어진다.
+
+몇 개의 구체적인 예를 보면서 일반적인 규칙을 찾을 수 있는지 살펴보자. 배열 <1,2>는 1,2,3을 만들 수 있고, <1,3>은 1,3,4를 만들 수 있다. 이를 통해, 배열의 가장 작은 요소가 배열에서 생성할 수 있는 숫자의 최솟값을 결정한다는 것을 알 수 있다. 따라서 배열에 1이 없다면 숫자 1을 만들 수 없다. 하지만 숫자 2는 다르다. 설령 배열 내에 2가 없더라도, 원소 1이 두 개라면 숫자 2를 만들 수 있기 때문이다.
+
+계속해서 더 큰 범위의 예제를 보자. <1,2,4>는 1,2,3,4,5,6,7을 만들 수 있고, <1,2,5>는 1,2,3,5,6,7,8을 만들 수 있다. 얼핏 보면, 배열 원소들의 합으로 V + 1을 제외한 V까지의 모든 값을 생성할 수 있는 것처럼 보인다. 여기서 V는 원소들의 합을 나타낸다. 그렇지만 <1,2,5>로 만들 수 있는 숫자 중에 4가 빠져 있다. 이와 관련된 규칙을 알아내기 위해, 이번에는 배열에 새로운 원소 u를 추가했을 때의 결과를 살펴보자.
+
+u <= V + 1이면 V + u까지의 모든 값을 만들 수 있으며 V + u + 1을 만들 수는 없다. 반면에 u > V + 1이면 u를 추가하더라도 V + 1을 생성할 수 없다. <1,2,5>로 4를 만들 수 없었던 이유는, 1과 2로 만들 수 있는 합이 3(V)이고 추가되는 수가 5(u)이므로, 5(u) > 3(v) + 1에 해당하기 때문이다.
+
+또 하나의 규칙은 배열 내의 원소 순서는 만들 수 있는 숫자에 아무런 영향을 끼치지 않는다는 것이다. 하지만 배열을 정렬하면 어떤 원소 이후의 모든 값은, 적어도 이전 원소보다 크다는 걸 알 수 있다. 너무 큰 값(u > V + 1을 만족하는 u를 가리킨다)에 도달했을 때는 연산을 멈추면 된다.
+
+예를 들어 M[i - 1]을, 정렬된 배열의 처음 i 원소에서 구할 수 있는 가장 큰 숫자라고 하자. 배열의 다음 요소 x가 M[i - 1] + 1보다 크다면 M[i - 1]이 여전히 가장 큰 숫자이다. 따라서 연산을 중단하고 M[i - 1] + 1을 결과로 반환한다. x가 M[i -1] + 1보다 작거나 같다면, M[i] = M[i - 1] + x로 설정하고 (i + 1)의 원소로 계속 진행한다.
+
+<12,2,1,15,2,4>를 예로 들어 보자. 원소들을 정렬하면 <1,2,2,4,12,15>가 된다.
+첫 번째 원소로 만들 수 있는 최댓값은 1이다.
+두 번째 원소인 2는 1 + 1과 같거나 작으므로 3을 포함한 모든 값을 만들 수 있다.
+세 번째 원소인 2는 5를 포함한 모든 값을 만들 수 있다.
+네 번째 원소인 4는 9까지의 모든 값을 만들 수 있다.
+다섯 번째 원소인 12는 9 + 1보다 커서 10을 만들 수 없기 때문에, 여기서 연산을 멈춘다.
+10은 배열의 원소들로 만들 수 없는 가장 작은 숫자다.
+
+이 규칙을 구현한 코드는 다음과 같다.
+
+```java
+public static int smallestNonconstructibleValueList(List<Integer> A) {
+    Collection.sort(A);
+    int maxConstructibleValue = 0;
+    for (int a : A) {
+        if (a > maxConstructibleValue + 1) {
+            break;
+        }
+        maxConstructibleValue += a;
+    }
+    return maxConstructibleValue + 1;
+}
+```
+
+배열의 길이를 n이라고 할 때 정렬은 $O(n \log n)$, 반복은 $O(n)$의 시간이 필요하므로 시간 복잡도는 $O(n \log n)$이다.
