--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -255,3 +255,80 @@ public static int smallestNonconstructibleValueList(List<Integer> A) {
 ```
 
 배열의 길이를 n이라고 할 때 정렬은 $O(n \log n)$, 반복은 $O(n)$의 시간이 필요하므로 시간 복잡도는 $O(n \log n)$이다.
+
+## 문제 13.5 달력 만들기
+
+온라인 달력 애플리케이션을 설계하는 문제를 생각해 보자. 설계할 구성요소 중 하나는 달력을 렌더링해서 시각적으로 표시하는 것이다.
+
+매일 여러 개의 이벤트가 있고 각 이벤트는 시작 시간과 끝나는 시간이 있다고 가정하자. 각 이벤트는 서로 겹치지 않는 직사각형 모양이며 X축과 Y축에 평행하다. X축을 시간이라고 하자. 이벤트의 시작시간이 b이고 끝다는 시간이 e라면, 직사각형의 양쪽 모서리는 b와 e에 있어야 한다. 그림 13.1에 이벤트의 집합을 표현했다.
+
+이벤트의 Y축은 반드시 0과 L(미리 정의된 상수값) 사이에 있어야 하고, 각 이벤트의 직사각형의 '높이'(X축에 평행한 변과 변 사이의 길이)는 같아야 한다. 이제 각 이벤트 직사각형의 최대 높이를 계산해야 한다. 즉, 다음과 같은 문제를 살펴보자.
+
+이벤트 집합이 주어졌을 때, 동시에 발생할 수 있는 이벤트의 최대 개수를 구하는 프로그램을 작성하라.
+
+> 힌트: 끝나는 시점에 집중하라.
+
+동시에 발생하는 이벤트의 개수는 오직 이벤트가 시작하는 시점 혹은 이벤트가 끝나는 시점에만 바뀔 수 있다. 따라서 다음과 같은 무식한 알고리즘을 생각해 볼 수 있다. 모든 이벤트의 시작점 혹은 끝나는 점에 있는 이벤트의 개수를 세어 보면 동시에 진행할 수 있는 이벤트의 최대 개수를 구할 수 있다. 만약 n개의 구간이 있다면, 전체 2n개의 점을 살펴보아야 한다. 각 이벤트가 포함하는 점을 확인하려면 $O(1)$ 시간이 걸리므로, 해당 점을 지나는 모든 이벤트의 개수를 세려면 $O(n)$ 시간이 필요하다. 따라서 전체 시간 복잡도는 $O(2n * n) = O(n^2)$이다.
+
+이 무식한 알고리즘이 비효율적인 이유는 이벤트가 서로 인접(locality)해 있다(따라서 하나의 끝점에서 다른 이벤트로 이동한다)는 특징을 사용하지 않았기 때문이다. 직관적으로 모든 점을 시간이 증가하는 순서대로 정렬할 수 있다면, 전체 수행 시간을 개선할 수 있다. 만약 같은 시간에 점이 두 개이고 하나는 시작점, 하나는 끝나는 점이라면, 시작점이 먼저 등장해야 한다. 만약 둘 다 시작점이건아 끝나는 점이라면 아무 순서로 배열해도 상관없다.
+
+카운터 변수를 사용해서 각 점을 지나는 이벤트의 개수를 점차적으로 추적해 나간다. 즉, 이벤트 구간이 시작되는 점을 만나면 카운터를 1만큼 증가시키고, 이벤트 구간이 끝나는 점을 만나면 카운터를 1만큼 감소시킨다. 카운터 변수가 최댓값이 될 때가 바로 이벤트 수가 최대인 경우이다.
+
+예를 들어 앞의 그림 13.1에서 첫 7개의 점은 1(시작), 2(시작), 4(시작), 5(끝), 5(끝), 6(시작), 7(끝)이 된다. 카운터 값은 1,2,3,2,1,2,1의 순서로 갱신된다.
+
+```java
+public static class Event {
+    public int start, finish;
+
+    public Event(int start, int finish) {
+        this.start = start;
+        this.finish = finish;
+    }
+}
+
+public static class Endpoint implements Comparable<Endpoint> {
+    public int time;
+    public boolean isStart;
+
+    @Override
+    public int compareTo(Endpoint e) {
+        if (time != e.time) {
+            return Integer.compare(time, e.time);
+        }
+        // 시간이 같다면, 시작점이 앞에 오도록 한다.
+        return isStart && !e.isStart ? -1 : !isStart && e.isStart ? 1 : 0;
+    }
+
+    Endpoint(int t, boolean is) {
+        time = t;
+        isStart = is;
+    }
+}
+
+public static int findMaxSimultaneousEvents(List<Event> A) {
+    // 모든 점을 포함하는 배열을 만든다.
+    List<Endpoint> E = new ArrayList<>();
+    for (Event event : A) {
+        E.add(new Endpoint(event.start, true));
+        E.add(new Endpoint(event.finish, false));
+    }
+    // 시간순으로 점의 위치를 정렬한다.
+    // 점의 위치가 같을 때는 시작점을 끝점보다 앞에 오도록 한다.
+    Collections.sort(E);
+
+    // 동시에 발생하는 이벤트의 개수를 추적한다.
+    // 그리고 그중에서 가장 많은 이벤트의 개수를 저장한다.
+    int maxNumSimultaneousEvents = 0, numSimultaneousEvents = 0;
+    for (Endpoint endpoint : E) {
+        if (endpoint.isStart) {
+            ++numSimultaneousEvents;
+            maxNumSimultaneousEvents = Math.max(numSimultaneousEvents, maxConstructibleValue);
+        } else {
+            --numSimultaneousEvents;
+        }
+    }
+    return maxNumSimultaneousEvents;
+}
+```
+
+배열의 길이를 n이라고 했을 때, 이 배열을 정렬하려면 $O(n \log n)$의 시간이 걸린다. 정렬된 배열을 한 번 순회하는 데 $O(n)$ 시간이 걸리므로, 총 시간 복잡도는 $O(n \log n)$이 된다. 공간 복잡도는 $O(n)$이다.
