--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -332,3 +332,73 @@ public static int findMaxSimultaneousEvents(List<Event> A) {
 ```
 
 배열의 길이를 n이라고 했을 때, 이 배열을 정렬하려면 $O(n \log n)$의 시간이 걸린다. 정렬된 배열을 한 번 순회하는 데 $O(n)$ 시간이 걸리므로, 총 시간 복잡도는 $O(n \log n)$이 된다. 공간 복잡도는 $O(n)$이다.
+
+## 문제 13.6 구간 합치기
+
+어떤 사람의 하루 스케줄을 겹치지 않는 시간 구간으로 표현한다고 해 보자. 만약 어떤 이벤트가 이 사람의 일정에 추가된다면, 그날의 전체 스케줄을 갱신해야 한다.
+
+우리가 원하는 것은 겹치지 않는 시간 구간의 집합에 새로운 시간 구간을 추가하는 것이다. 하지만 집합 안에서 시간 구간은 서로 겹치면 안 되므로 이 집합을 새롭게 다시 만들어야 한다. 예를 들어 기존의 집합이 [-4,-1], [0,2], [3,6], [7,9], [11,12], [14,17]이고 [1,8]을 추가한다면, 새로운 집합은 [-4,-1],[0,9],[11,12],[14,17]이 된다.
+
+정수 좌표로 이루어진 구간의 집합과 새로 추가될 구간이 입력으로 주어졌을 때, 새로 갱신된 구간의 집합을 반환하는 프로그램을 작성하라. 단, 입력으로 주어지는 구간의 집합은 서로 겹치지 않고, 왼쪽 점의 위치가 증가하는 순서대로 배열에 정렬되어 있다고 가정해도 좋다. 새롭게 갱신한 구간의 집합도 왼쪽 점의 위치가 증가하는 순서대로 정렬되어 있어야 한다.
+
+> 힌트: 어떻게 두 개의 구간을 합칠 수 있을까?
+
+무식한 방법으로 생각해 보자. 우선 구간 집합에서 가장 왼쪽에 있는 점과 가장 오른쪽에 있는 점의 위치를 찾고, 새롭게 추가되는 구간에서도 가장 왼쪽 점과 가장 오른쪽 점을 찾는다. 그리고 그 사이에 있는 모든 정수값에 대해서 겹치는 구간이 있는지 없는지 확인해 본다. 이 방법의 시간 복잡도는 $O(Dn)$이다. 여기서 D는 가장 왼쪽에 있는 점과 가장 오른쪽에 있는 점의 차이가 되고, n은 전체 구간의 개수이다. D가 n보다 훨씬 클 수도 있다. 예를 들어 구간 배열 정보가 <[0,1],[999999,1000000]>으로 주어진다면, 이 방법을 사용하면 0부터 1000000까지 순회해야 한다.
+
+사실 끝점이 아닌 값도 전부 살펴볼 필요는 없다. 왜냐하면 어떤 정수값 p가 끝점이 아니라면 p-1도 끝점이 아니기 때문이다. 따라서 끝점을 찾는 데 초점을 맞추고, 정렬된 속성을 사용해서 구간 배열을 빠르게 처리하면 더 나은 방법이 된다.
+
+배열의 구간을 처리할 때는 다음 세 가지 단계를 거친다.
+
+1. 새롭게 추가할 구간보다 확실히 앞에 있는 구간들은 결과 배열에 곧바로 추가한다.
+2. 새롭게 추가할 구간과 겹치는 구간을 만나면, 이 둘을 합친 구간을 새롭게 구한다. 그 뒤 계속해서 구간 집합을 순회하면서 합치는 작업을 계속한다. 더 이상 구간이 겹치지 않는다면 새롭게 합친 구간 하나를 결과 배열에 추가한다.
+3. 마지막으로 남은 구간을 계속해서 순회한다. 기존의 배열이 정렬되어 있으므로, 더 이상 새로운 구간과 겹치는 구간은 없다. 따라서 곧바로 결과 배열에 추가해 주면 된다.
+
+정렬된 구간 배열이 [-4,-1], [0,2], [3,6], [7,9], [11,12], [14,17]이고 새롭게 추가되는 구간이 [1,8]이라고 가정하자.
+
+첫 번째 단계를 시작한다. [-4,-1]은 [1,8]과 겹치지 않으므로 바로 결과 집합에 추가한다.
+그 다음에 [0,2]는 [1,8]과 겹치므로 두 번째 단계에 진입한다. 이 둘을 합쳐서 새로운 구간 [0,8]을 만든다.
+그 다음 [3,6]은 [0,8]에 속하므로 [7,9]로 넘어간다. 이 구간은 [0,8]과 겹치므로 이 둘을 합쳐 새로운 구간 [0,9]를 만든다.
+그 다음 [11,12]는 [0,9]와 겹치지 않으므로 세 번째 단계로 진입한다.
+남은 구간을 전부 결과 배열에 추가하면 최종적으로 [-4,-1], [0,9], [11,12], [14,17]이 된다. 이 알고리즘이 '지역적'인 정보를 어떻게 사용했는지 다시 살펴보자. 정렬의 속성에 의해 빠진 구간의 조합이 없다는 사실을 보장할 수 있다.
+
+다음은 이를 구현한 코드이다.
+
+```java
+private static class Interver {
+    public int left, right;
+
+    public Interval(int l, int r) {
+        this.left = l;
+        this.right = r;
+    }
+}
+
+public static List<Interval> addInterval(List<Interval> disjointIntervals, Interval newInterval) {
+    int i = 0;
+    List<Interval> result = nwe ArrayList<>();
+
+    // disjointIntervals에서 newInterval보다 앞에 등장하는 구간들을 처리한다.
+    while (i < disjointIntervals.size() && newInterval.left > disjointIntervals.get(i).right) {
+        result.add(disjointIntervals.get(i++));
+    }
+
+    // disjointIntervals에서 newInterval와 겹치는 구간들을 처리한다.
+    while (i < disjointIntervals.size() && newInterval.right >= disjointIntervals.get(i).left) {
+        // 만약 [a, b]와 [c, d]가 겹친다면,
+        // 이둘을 합친 결과는 [min(a, c), max(b, d)]가 된다.
+        newInterval = new Interval(
+            Math.min(newInterval.left, disjointIntervals.get(i).left),
+            Math.max(newInterval.right, disjointIntervals.get(i).right)
+        );
+        ++i;
+    }
+    result.add(newInterval);
+
+    // disjointIntervals에서 newInterval보다 뒤에 등장하는 구간들을 처리한다.
+    result.addAll(disjointIntervals.subList(i, disjointIntervals.size()));
+    
+    return result;
+}
+```
+
+각 구간을 처리하는 데 $O(1)$ 시간을 사용하므로 전체 시간 복잡도는 $O(n)$이다.
