--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -507,3 +507,73 @@ public static class Interval implements Comparable<Interval> {
 ```
 
 시간 복잡도는 정렬에 필요한 $O(n \log n)$이다.
+
+## 문제 13.8 반복되는 원소가 많은 배열, 정렬하고 나누기
+
+중복되는 원소가 존재하고, 크기가 굉장히 큰 배열을 재배치해야 한다고 생각해보자. 예를 들어 입력 배열이 <b,a,c,b,d,a,b,d,>일 때, <a,a,b,b,b,c,d,d>와 <d,d,c,a,a,b,b,b> 모두 올바른 정렬이라고 가정하자.
+
+원소가 정수값이라면 단순히 배열을 정렬하면 된다. 만약 배열의 크기에 비해 서로 다른 정수값의 개수가 얼마 안 된다면 단순히 정렬 알고리즘을 적용하기보단 서로 다른 정수값이 등장한 횟수를 센 뒤 정렬된 순서로 배열에 다시 써 준다. 만약 배열의 원소가 하나의 키와 다수의 변수로 이루어진 객체라면, 이 문제는 어려워진다.
+
+학생 객체로 이루어진 배열이 주어졌다고 가정하자. 각 학생의 나이 정보가 주어져 있고, 나이가 학생의 키값이 된다. 나이가 같은 학생들을 함께 두도록 배열을 재정렬하고자 한다. 나이가 다른 학생의 순서는 중요하지 않다. 만약 나이가 정렬된 순서로 등장해야 하는 경우엔 또 어떻게 할 것인가?
+
+> 힌트: 각 나이에 해당하는 학생수를 센다.
+
+무식한 방법은 나이를 기준으로 배열을 정렬하는 것이다. 만약 배열의 길이가 n이라면 시간 복잡도는 $O(n \log n)$이 되고, 공간 복잡도는 $O(1)$이 된다. 이 방법이 비효율적인 이유는 문제에서 요구하는 것보다 더 많은 처리를 수행하기 때문이다. 단순히 나이가 같은 학생을 옆에 두기만 하면 된다.
+
+문제에서 언급한 방법을 사용해 보자. 하지만 우리는 정수값이 아닌 객체를 사용하므로 이 방법을 그대로 사용할 수는 없다. 즉, 두 학생의 나이가 같더라도 이 둘은 다른 학생으로 처리해야 한다.
+
+예를 들어, 다음 배열을 생각해 보자. <(Greg, 14), (John, 12), (Andy, 11), (Jim, 13), (Phil, 12), (Bob, 13), (Chip, 13), (Tim, 14)>. 배열을 순회하면서 각 나이의 학생을 해시에 기록한다. 즉, 해시의 키는 학생의 나이가 되고, 값은 해당 나이의 학생수가 된다. 이 예제의 최종 해시값은 (14, 2), (12, 2), (11, 1), (13, 3)이 된다. 이 해시 결과에 따르면 우리는 14세인 학생 두 명, 12세인 학생 두 명, 11세인 학생 한 명, 13세인 학생 세 명이 있다. 나이가 같은 학생을 인접하게만 두면 이들을 어떤 순서로 쓰든 관계없다.
+
+결과를 저장할 배열에서 14세인 학생 두 명은 0번, 12세인 학생 두 명은 0 + 2 = 2번, 11세인 학생 한 명은 2 + 2 = 4번, 13세인 학생 세명은 4 + 1 = 5번 인덱스에서 시작한다. 기존 입력 배열을 순회하면서 각 학생의 나이에 맞는 인덱스에 작성하기만 하면 된다. 예를 들어 입력 배열의 첫 4명을 학생 결과 배열에 작성하면, 결과 배열은 <(Greg, 14), _ , (John, 12), _ , (Andy, 11), (Jim, 13), _ , _ >이 된다.
+
+시간 복자도는 $O(n)$이고, 그결과를 새로운 배열에 작성해야 하므로 공간 복잡도도 $O(n)$이 된다. 결과 배열을 새로 할당하지 않고 기존 입력 배열 내에서 갱신을 할 수 있으면 공간 복잡도를 줄일 수 있다. 이렇게 하려면 서로 다른 원소를 부분배열에 유지하고 있으면 된다. 각 부분배열은 아직 제자리를 찾지 못한 원소를 표시하고 있다. 부분배열의 요소를 교체하여 올바른 위치로 이동시킨다.
+
+다음 프로그램은 부분배열을 추적하기 위해 해시테이블을 두 개 사용했다. 하나는 부분배열의 시작 지점을 기록하고, 다른 하나는 부분배열의 크기를 기록한다. 부분배열이 비면 즉시 제거한다.
+
+```java
+private static class Person {
+    public Integer age;
+    public String name;
+
+    public Person (Integer k, String n) {
+        age = k;
+        name = n;
+    }
+}
+
+public static void groupByAge(List<Person> people) {
+    Map<Integer, Integer> ageToCount = new HashMap<>();
+    for (Person p : people) {
+        if (ageToCount.containsKey(p.age)) {
+            ageToCount.put(p.age, ageToCount.get(p.age) + 1);
+        } else {
+            ageToCount.put(p.age, 1);
+        }
+    }
+    Map<Integer, Integer> ageToOffset = new HashMap<>();
+    int offset = 0;
+    for (Map.Entry<Integer, Integer> kc : ageToCount.entrySet()) {
+        ageToOffset.put(kc.getKey(), offset);
+        offset += kc.getValue();
+    }
+
+    while (!ageToOffset.isEmpty()) {
+        Map.Entry<Integer, Integer> from = ageToOffset.entrySet().iterator().next();
+        Integer toAge = people.get(from.getValue()).age;
+        Integer toValue = ageToOffset.get(toAge);
+        Collections.swap(people, from.getValue(), toValue);
+        // ageToCount를 사용해서 해당 나이의 학생을 언제 전부 처리하는지 확인한다.
+        Integer count = ageToCount.get(toAge) - 1;
+        ageToCount.put(toAge, count);
+        if (count > 0) {
+            ageToOffset.put(toAge, toValue + 1);
+        } else {
+            ageToOffset.remove(toAge);
+        }
+    }
+}
+```
+
+처음에 해시테이블의 n번의 삽입 연산을 수행하고, 두 번째에 한 원소를 올바른 위치로 옮기는 데 $O(1)$의 연산을 수행하였으므로 전체 시간 복잡도는 $O(n)$이 된다. 서로 다른 나이가 m개일 때 추가 공간 복잡도는 해시 테이블을 사용하는 데 필요한 $O(n)$이 된다.
+
+만약 나이를 정렬된 순서로 배치하고 싶다면, 14장에서 소개할 이진 탐색 트리 방식의 맵을 사용하면 된다. 이진 탐색 트리 방식의 맵은 나이를 정렬된 순서대로 저장한다. 예를 들어, 나이-학생수의 쌍을 이진 탐색 트리 방식의 맵에 저장하면 그 순서는 (11, 1), (12, 2), (13, 3), (14, 2)가 된다. 시간 복잡도는 $O(n + m \log m)$이 된다. 왜냐하면 이진 탐색 트리에서 삽입 연산은 $O(\log m)$이 소요되기 때문이다. 이런 방색의 정렬을 계수정렬(counting sort)이라 한다.
