--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -637,3 +637,66 @@ class Team {
 ```
 
 시간 복잡도는 정렬에 필요한 $O(n \log n)$이다.
+
+## 문제 13.10 리스트를 빠르게 정렬하는 알고리즘 구현하기
+
+리스트를 효율적으로 정렬하는 루틴을 작성하라. 그 결과는 안정된 정렬이어야 한다. 즉, 원소가 같은 경우에도 그들의 상대적인 위치가 변하지 않아야 한다.
+
+> 힌트: 리스트가 배열보다 효과적인 부분은 무엇인가?
+
+무식한 방법은 반복적으로 리스트에서 가장 작은 원소를 삭제한 뒤 새로운 리스트에 추가하는 것이다. 이 방법의 시간 복잡도는 $O(n^2)$이고 공간 복잡도는 $O(n)$이다. 여기서 n은 리스트의 노드의 개수와 같다. 새로운 리스트를 만들지 않고 기존 리스트에서 순서만 재배치하는 방법으로 공간 복잡도는 $O(1)$로 만들 수도 있다.
+
+```java
+public static ListNode<Integer> insertionSort(final ListNode<Integer> L) {
+    ListNode<Integer> dummyHead = new ListNode<>(0, L);
+    ListNode<Integer> iter = L;
+
+    // 부분 리스트는 iter까지의 노드를 정렬된 순서로 저장하고 있다.
+    // iter.next를 통해 다음 노드로 옮겨 간 이후에도 반드시 정렬되어 있어야 한다는
+    // 속성을 만족해야 한다. iter.next가 올바른 위치로 이동할 때까지
+    // 바로 전 노드와 맞바꿔 나가는 과정을 반복한다.
+    while (iter != null && iter.next != null) {
+        if (iter.data > iter.next.data) {
+            ListNode<Integer> target = iter.next, pre = dummyHead;
+            while (pre.next.data < target.data) {
+                pre = pre.next;
+            }
+            ListNode<Integer> temp = pre.next;
+            pre.next = target;
+            iter.next = target.next;
+            target.next = temp;
+        } else {
+            iter = iter.next;
+        }
+    }
+    return dummyHead.next;
+}
+```
+
+리스트가 역순으로 정렬되어 있는 경우에 이 방법의 시간 복잡도는 $O(n^2)$이 된다. 공간 복잡도는 $O(1)$이다.
+
+배열에 관해 알고 있는 내용을 리스트에 적용해서 수행시간을 개선해 보자. 퀵정렬은 배열을 정렬하는 가장 좋은 방법이다. 시간 복잡도는 $O(n \log n)$이고 추가 공간을 사용하지 않는다. 하지만 안정된 정렬은 아니다. 병합 정렬은 안정된 $O(n \log n)$ 알고리즘이다. 하지만 정렬된 두 배열을 하나로 합치는 데 추가 공간을 사용하지 않고 선형시간에 수행하기 힘들기 때문에 추가 공간이 필요하다.
+
+배열과 달리 리스트에선 병합과정을 추가공간 없이 수행할 수 있다. 개념적으로 리스트에서 삽입연산은 $O(1)$이 걸린다. 다음은 리스트에서 병합 정렬을 수행하는 프로그램이다. 리스트를 크기가 동일한 두 개의 부분 리스트로 나눈다. 리스트의 중앙을 찾기 위해 두 개의 반복자를 사용해서 하나의 반복자가 다른 반복자보다 두 배 빠르게 움직인다. 빠른 반복자가 리스트의 끝에 도달했을 때 느린 반복자는 리스트의 중앙에 위치한다. 부분 리스트를 재귀적으로 절반으로 나눈 뒤 문제 7.1의 해법(정렬된 두 리스트를 병합하는 방법)을 사용해서 정렬된 두 개의 부분 리스트를 합쳐준다.
+
+```java
+public static ListNode<Integer> stableSortList(ListNode<Integer> L) {
+    // 기저 사례: L이 비어 있거나 노드가 하나인 경우에는 단순히 반환한다.
+    if (L == null || L.next == null) {
+        return L;
+    }
+
+    // 느린 포인터와 빠른 포인터를 사용해서 L의 중앙을 찾는다.
+    ListNode<Integer> preSlow = null, slow = L, fast = L;
+    while (fast != null && fast.next != null) {
+        preSlow = slow;
+        fast = fast.next.next;
+        slow = slow.next;
+    }
+
+    preSlow.next = null; // 크기가 동일한 두 개의 리스트로 나눈다.
+    return MergeSortedLists.mergeTwoSortedLists(stableSortList(L), stableSortList(slow));
+}
+```
+
+시간 복잡도는 병합 정렬과 마찬가지로 $O(n \log n)$이 된다. 재귀적으로 함수를 호출할 때 리스트의 크기를 절반씩 줄여 나가기 때문에, 함수 호출 스택의 깊이가 log n이 되고, 따라서 명시적으로 추가 메모리를 사용하지 않았더라도 공간 복잡도는 $O(\log n)$이 된다.
