--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -700,3 +700,46 @@ public static ListNode<Integer> stableSortList(ListNode<Integer> L) {
 ```
 
 시간 복잡도는 병합 정렬과 마찬가지로 $O(n \log n)$이 된다. 재귀적으로 함수를 호출할 때 리스트의 크기를 절반씩 줄여 나가기 때문에, 함수 호출 스택의 깊이가 log n이 되고, 따라서 명시적으로 추가 메모리를 사용하지 않았더라도 공간 복잡도는 $O(\log n)$이 된다.
+
+## 문제 13.11 급여의 한계 구하기
+
+여러분은 ABC 회사의 재무팀에서 일하고 있다. ABC 회사는 전체 급여에 들어가는 지출을 특정 지점까지 줄이려고 한다. CEO는 작년 급여에 한도를 설정해서 지출을 줄이려고 한다. 작년에 이 한도보다 많은 급여를 받은 직원은 올해 이 한도만큼만 급여를 받게 된다. 작년에 이 한도보다 적게 받은 직원의 급여는 변하지 않는다.
+
+예를 들어 작년에 직원 다섯 명의 급여가 $90, $30, $100, $40, $20이고 올해 급여지출의 한계가 $210이라면, $60이 올해 급여의 한계가 된다. 왜냐하면 60 + 30 + 60 + 40 + 20 = 210이기 때문이다.
+
+기존 급여와 전체 급여지출의 한도가 주어졌을 때, 각 직원이 받게 될 급여의 한도를 구하는 알고리즘을 설계하라.
+
+> 힌트: 한도에 따라 급여가 어떻게 변하는가?
+
+가능한 급여의 한도는 무한하기 때문에 여기서 무식한 방법은 도움이 되지 않는다.
+
+급여의 한도는 0에서 현재 급여의 최댓값 사이가 된다. 한도에 따라 급여가 증가하므로 이 범위에서 이진 탐색을 할 수 있다. 만약 한도가 너무 커지면 한도를 그보다 올릴 필요가 없다. 한도가 너무 낮더라도 마찬가지이다.
+
+n명의 직원 급여 정보가 배열 A에 주어졌다고 가정하자. 급여를 나타내는 $P(c)$는 $\sum_{i=0}^{n-1} min(A[i], c)$가 된다. 매번 이진탐색을 할 때마다 $P(c)$를 구하려면 $O(n)$의 시간이 걸린다. 문제 11.5의 해법에서 말했듯이 이진 탐색을 수행하는 횟수는 가장 높은 급여와 얼마나 정확한 값을 찾고 싶은지에 따라 달라진다.
+
+좀 더 분석적인 방법을 사용해서 특정 오차에 대한 필요를 없애보자. 직관적으로 전체 급여의 한도를 증가할 때, 이 한도가 어떤 직원의 급여를 넘지 않는다면 전체 급여는 선형적으로 증가한다.
+
+따라서 직원들의 급여를 증가하는 순서대로 순회함으로써 문제를 해결할 수 있다. 직원의 급여가 배열 A에 정렬된 순서대로 주어졌다고 가정하자. 전체 급여의 한도 T는 k번째와 k + 1번째 직원의 급여 사이에 있을 것이다. 따라서 $\sum_{i=0}^{k-1} A[i] + (n - k)c$이 T가 되는 c를 찾으면 되고, 이 c는 $(T - \sum_{i=0}^{k-1} A[i]) / (n - k)$이 된다.
+
+주어진 예제를 살펴보자. A = <20,30,40,90,100>이고 T = 210이다. 각 직원의 급여를 전체 급여의 한도라고 설정했을 때 배열 A는 <100,140,170,270,280>이 된다. T = 210이고, 이는 170과 270 사이의 값이므로 급여의 전체 한도는 40과 90 사이의 값이 될 것이다. 급여의 전체 한도 c가 40과 90 사이에 있으므로 전체 급여는 20 + 30 + 40 + 2c가 된다. 이 값이 210이 되어야 하므로 20 + 30 + 40 + 2c = 210을 계산하면 c = 60이 된다.
+
+```java
+public static double findSalaryCap(int targetPayroll, List<Integer> currentSalaries) {
+    Collections.sort(currentSalaries);
+    double unadjustedSalarySum = 0;
+    for (int i = 0; i < currentSalaries.size(); i++) {
+        final int adjustedPeople = currentSalaries.size() - i;
+        final double adjustedSalarySum = currentSalaries.get(i) * adjustedPeople;
+        if (unadjustedSalarySum + adjustedSalarySum >= targetPayroll) {
+            return (targetPayroll - unadjustedSalarySum) / adjustedPeople;
+        }
+        unadjustedSalarySum += currentSalaries.get(i);
+    }
+    // targetPayroll > 기존의 급여이므로 해법이 존재하지 않는다.
+    return -1.0;
+}
+```
+
+가장 비용이 많이 드는 연산은 A를 정렬하는 부분이다. 따라서 전체 시간 복잡도는 $O(n \log n)$이 된다. A를 정렬한 뒤에는 단순하게 배열을 순회하면서 전체 급여의 한도를 넘어서는 첫 번째 급여가 무엇인가 찾은 뒤 수식을 계산하면 된다.
+
+만약 급여가 이미 정렬되어 있고 누적 합계가 주어져 있다면, 전체 급여의 한도 T에 대해 이진 탐색을 수행할 수 있으므로 시간 복잡도 $O(\log n)$이 된다.
